--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -9,6 +9,10 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UncoveringHistory">
+        <activity android:name=".Profile"></activity>
+        <activity android:name=".Favourites" />
+        <activity android:name=".Routes" />
+        <activity android:name=".Map" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
