--- a/app/build.gradle
+++ b/app/build.gradle
@@ -31,14 +31,18 @@ android {
 
 dependencies {
 
-    implementation 'androidx.appcompat:appcompat:1.2.0'
-    implementation 'com.google.android.material:material:1.3.0'
-    implementation 'androidx.constraintlayout:constraintlayout:2.0.4'
-    implementation 'com.google.android.material:material:1.0.0'
-    implementation 'com.google.android.gms:play-services-maps:17.0.0'
-    implementation platform('com.google.firebase:firebase-bom:26.8.0')
-    implementation 'com.google.firebase:firebase-analytics'
-    testImplementation 'junit:junit:4.+'
-    androidTestImplementation 'androidx.test.ext:junit:1.1.2'
-    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
+    implementation 'androidx.appcompat:appcompat:1.2.0' // App compatibility
+    implementation 'com.google.android.material:material:1.3.0'// Android Materials
+    implementation 'androidx.constraintlayout:constraintlayout:2.0.4' // Constraint Layout
+    implementation 'com.google.android.gms:play-services-maps:17.0.0' // Google Maps
+    implementation 'com.google.firebase:firebase-bom:26.8.0' // Firebase BOM
+    implementation 'com.google.firebase:firebase-analytics:17.5.0' // Firebase Analytics
+    implementation 'com.firebaseui:firebase-ui-auth:6.4.0' // Firebase authentication
+    // The following was required to get SHA1 key
+    // C:\Program Files (x86)\Java\jre1.8.0_281\bin>keytool -exportcert -list -V -alias androiddebugkey -keystore C:\Users\whwil\.android\debug.keystore
+    implementation 'com.facebook.android:facebook-android-sdk:5.0.0' // Login support for Facebook
+    implementation 'com.twitter.sdk.android:twitter-core:3.3.0' // Login support for Twitter
+    testImplementation 'junit:junit:4.+' // Integrated unit test runner
+    androidTestImplementation 'androidx.test.ext:junit:1.1.2' // Junit testing support
+    androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0' // Espresso testing support
 }
