--- a/app/build.gradle
+++ b/app/build.gradle
@@ -36,11 +36,13 @@ dependencies {
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4' // Constraint Layout
     implementation 'com.google.android.gms:play-services-maps:17.0.0' // Google Maps
     implementation 'com.google.firebase:firebase-bom:26.8.0' // Firebase BOM
-    implementation 'com.google.firebase:firebase-analytics:17.5.0' // Firebase Analytics
+    implementation 'com.google.firebase:firebase-analytics:18.0.2' // Firebase Analytics
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0' // Firebase authentication
+    implementation 'com.github.bumptech.glide:glide:3.7.0'
     // The following was required to get SHA1 key
     // C:\Program Files (x86)\Java\jre1.8.0_281\bin>keytool -exportcert -list -V -alias androiddebugkey -keystore C:\Users\whwil\.android\debug.keystore
-    implementation 'com.facebook.android:facebook-android-sdk:5.0.0' // Login support for Facebook
+    implementation 'com.facebook.android:facebook-android-sdk:[5,6)' // Login support for Facebook
+    implementation 'com.facebook.android:facebook-login:8.1.0'
     implementation 'com.twitter.sdk.android:twitter-core:3.3.0' // Login support for Twitter
     testImplementation 'junit:junit:4.+' // Integrated unit test runner
     androidTestImplementation 'androidx.test.ext:junit:1.1.2' // Junit testing support
