--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,7 +2,6 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.uncoveringhistory">
-
     <!--
          The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
          Google Maps Android API v2, but you must specify either coarse or fine
@@ -18,7 +17,7 @@
         android:roundIcon="@mipmap/ic_launcher_round"
         android:supportsRtl="true"
         android:theme="@style/Theme.UncoveringHistory">
-
+        <activity android:name=".SitePage"></activity>
 
         <meta-data
             android:name="com.google.android.geo.API_KEY"
@@ -32,7 +31,7 @@
         <activity android:name=".Favourites" />
         <activity android:name=".Routes" />
         <activity android:name=".Map" />
-        <activity android:name=".CreateNewSite"></activity>
+        <activity android:name=".CreateNewSite" />
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
