--- a/app/build.gradle
+++ b/app/build.gradle
@@ -45,7 +45,9 @@ dependencies {
     implementation 'com.facebook.android:facebook-login:8.1.0'
     implementation 'com.twitter.sdk.android:twitter-core:3.3.0'
     implementation 'com.google.firebase:firebase-database:19.7.0'
-    implementation 'com.google.firebase:firebase-storage:19.2.2'// Login support for Twitter
+    implementation 'com.google.firebase:firebase-storage:19.2.2'
+    implementation 'com.google.android.gms:play-services-location:18.0.0'
+// Login support for Twitter
     testImplementation 'junit:junit:4.+' // Integrated unit test runner
     androidTestImplementation 'androidx.test.ext:junit:1.1.2' // Junit testing support
     androidTestImplementation 'androidx.test.espresso:espresso-core:3.3.0'
