--- a/app/build.gradle
+++ b/app/build.gradle
@@ -35,6 +35,7 @@ dependencies {
     implementation 'com.google.android.material:material:1.3.0'// Android Materials
     implementation 'androidx.constraintlayout:constraintlayout:2.0.4' // Constraint Layout
     implementation 'com.google.android.gms:play-services-maps:17.0.0' // Google Maps
+    implementation 'com.google.maps.android:android-maps-utils:0.5+'
     implementation 'com.google.firebase:firebase-bom:26.8.0' // Firebase BOM
     implementation 'com.google.firebase:firebase-analytics:18.0.2' // Firebase Analytics
     implementation 'com.firebaseui:firebase-ui-auth:6.4.0' // Firebase authentication
