--- a/app/src/main/AndroidManifest.xml
+++ b/app/src/main/AndroidManifest.xml
@@ -2,15 +2,13 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
     xmlns:tools="http://schemas.android.com/tools"
     package="com.example.uncoveringhistory">
-    <!--
-         The ACCESS_COARSE/FINE_LOCATION permissions are not required to use
-         Google Maps Android API v2, but you must specify either coarse or fine
-         location permissions for the "MyLocation" functionality.
-    -->
+
+    <!--  App permissions to allow app to perform tasks  -->
     <uses-permission android:name="android.permission.ACCESS_COARSE_LOCATION" />
     <uses-permission android:name="android.permission.ACCESS_FINE_LOCATION" />
     <uses-permission android:name="android.permission.INTERNET" />
 
+    <!-- Instructing the Manifest that the App Icon  -->
     <application
         android:icon="@mipmap/ic_launcher"
         android:label="@string/app_name"
@@ -18,11 +16,7 @@
         android:supportsRtl="true"
         android:theme="@style/Theme.UncoveringHistory">
 
-        <activity android:name=".user_registration"></activity>
-        <activity android:name=".WorkInProgressPage" />
-        <activity android:name=".AboutPage" />
-        <activity android:name=".SitePage" />
-
+        <!-- Instructing the Manifest that these are Third-party API Keys for login's -->
         <meta-data
             android:name="com.google.android.geo.API_KEY"
             android:value="@string/google_maps_key" />
@@ -31,10 +25,16 @@
             android:value="@string/facebook_app_id"
             tools:replace="android:value" />
 
+        <!-- Instructing the Manifest that these are activity pages -->
         <activity android:name=".Profile" />
         <activity android:name=".Routes" />
         <activity android:name=".Map" />
+        <activity android:name=".user_registration"></activity>
+        <activity android:name=".WorkInProgressPage" />
+        <activity android:name=".AboutPage" />
+        <activity android:name=".SitePage" />
         <activity android:name=".CreateNewSite" />
+        <!-- The Main Activity is the first page that is loaded -->
         <activity android:name=".MainActivity">
             <intent-filter>
                 <action android:name="android.intent.action.MAIN" />
